tests/snapshots/yaml_suite_snapshots__yaml_suite_P94K_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "key: value\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2780696"
  json: "{\n  \"key\": \"value\"\n}\n"
  name: Spec Example 6.11. Multi-Line Comments
  tags: spec comment
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :value\n  -MAP\n -DOC\n-STR\n"
  yaml: "key:    # Comment\n        # lines\n  value\n↵\n↵\n"
