tests/snapshots/yaml_suite_snapshots__yaml_suite_PBJ2_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 2.3. Mapping Scalars to Sequences
  from: "http://www.yaml.org/spec/1.2/spec.html#id2759963"
  tags: spec mapping sequence
  yaml: "american:\n  - Boston Red Sox\n  - Detroit Tigers\n  - New York Yankees\nnational:\n  - New York Mets\n  - Chicago Cubs\n  - Atlanta Braves\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :american\n   +SEQ\n    =VAL :Boston Red Sox\n    =VAL :Detroit Tigers\n    =VAL :New York Yankees\n   -SEQ\n   =VAL :national\n   +SEQ\n    =VAL :New York Mets\n    =VAL :Chicago Cubs\n    =VAL :Atlanta Braves\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"american\": [\n    \"Boston Red Sox\",\n    \"Detroit Tigers\",\n    \"New York Yankees\"\n  ],\n  \"national\": [\n    \"New York Mets\",\n    \"Chicago Cubs\",\n    \"Atlanta Braves\"\n  ]\n}\n"
  dump: "american:\n- Boston Red Sox\n- Detroit Tigers\n- New York Yankees\nnational:\n- New York Mets\n- Chicago Cubs\n- Atlanta Braves\n"
