tests/snapshots/yaml_suite_snapshots__yaml_suite_PBJ2_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.3. Mapping Scalars to Sequences
  from: "http://www.yaml.org/spec/1.2/spec.html#id2759963"
  tags: spec mapping sequence
  yaml: "american:\n  - Boston Red Sox\n  - Detroit Tigers\n  - New York Yankees\nnational:\n  - New York M…"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :american\n   +SEQ\n    =VAL :Boston Red Sox\n    =VAL :Detroit Tiger…"
  json: "{\n  \"american\": [\n    \"Boston Red Sox\",\n    \"Detroit Tigers\",\n    \"New York Yankees\"\n  ],\n  …"
  dump: "american:\n- Boston Red Sox\n- Detroit Tigers\n- New York Yankees\nnational:\n- New York Mets\n- C…"
