tests/snapshots/yaml_suite_snapshots__yaml_suite_PBJ2_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "american:\n- Boston Red Sox\n- Detroit Tigers\n- New York Yankees\nnational:\n- New York Mets\n- Chicago Cubs\n- Atlanta Braves\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2759963"
  json: "{\n  \"american\": [\n    \"Boston Red Sox\",\n    \"Detroit Tigers\",\n    \"New York Yankees\"\n  ],\n  \"national\": [\n    \"New York Mets\",\n    \"Chicago Cubs\",\n    \"Atlanta Braves\"\n  ]\n}\n"
  name: Spec Example 2.3. Mapping Scalars to Sequences
  tags: spec mapping sequence
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :american\n   +SEQ\n    =VAL :Boston Red Sox\n    =VAL :Detroit Tigers\n    =VAL :New York Yankees\n   -SEQ\n   =VAL :national\n   +SEQ\n    =VAL :New York Mets\n    =VAL :Chicago Cubs\n    =VAL :Atlanta Braves\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "american:\n  - Boston Red Sox\n  - Detroit Tigers\n  - New York Yankees\nnational:\n  - New York Mets\n  - Chicago Cubs\n  - Atlanta Braves\n"
